# abideify

./: README.md  pyproject.toml
src/abideify/: __init__.py  ai_processor.py  cli.py  converter.py  prompts.py  tts_service.py  unreal_cli.py
